// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<div>
  <WithStyles(ForwardRef(FormControlLabel))
    control={
      <ForwardRef(WithStyles)
        checked={false}
        color="primary"
        onChange={[Function]}
        value="switch"
      />
    }
    label="Title"
  />
</div>
`;

exports[`renders disabled 1`] = `
<div>
  <WithStyles(ForwardRef(FormControlLabel))
    control={
      <ForwardRef(WithStyles)
        checked={false}
        color="primary"
        onChange={[Function]}
        value="switch"
      />
    }
    disabled={true}
    label="Title"
  />
</div>
`;

exports[`renders with helper text 1`] = `
<div>
  <WithStyles(ForwardRef(FormControlLabel))
    control={
      <ForwardRef(WithStyles)
        checked={false}
        color="primary"
        onChange={[Function]}
        value="switch"
      />
    }
    label="Title"
  />
  <WithStyles(ForwardRef(FormHelperText))>
    test
  </WithStyles(ForwardRef(FormHelperText))>
</div>
`;
